force-app/main/default/objects/CalculationHistory__c/CalculationHistory__c.object-meta.xml
<CustomObject>
    <label>Calculation History</label>
    <nameField>
        <displayFormat>CALC-{0000}</displayFormat>
        <label>Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>FirstOperand__c</fullName>
        <label>First Operand</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondOperand__c</fullName>
        <label>Second Operand</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>