force-app/main/default/objects/CalculationHistory__c/fields/FirstOperand__c.field-meta.xml
<CustomField>
    <fullName>FirstOperand__c</fullName>
    <label>First Operand</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>