force-app/main/default/objects/CalculationHistory__c/fields/SecondOperand__c.field-meta.xml
<CustomField>
    <fullName>SecondOperand__c</fullName>
    <label>Second Operand</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>